<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"  >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <include layout="@layout/chord_keys_layout"/>

        <include layout="@layout/chord_harm_layout"/>

        <include layout="@layout/chord_selection_layout"/>
    </RelativeLayout>



    <LinearLayout
        android:layout_width="@dimen/match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        android:background="?colorPrimary"
        android:elevation="@dimen/button_bar_elevation">

        <Button
            android:id="@+id/button_harm"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/select_harm"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textAlignment="viewStart"
            android:layout_marginLeft="@dimen/padding_normal"
            android:textColor="@color/textActive"/>

        <Button
            android:id="@+id/button_up"
            style="?android:borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_key_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/textActive"/>

        <Button
            android:id="@+id/button_down"
            style="?android:borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_key_down"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/textActive"/>

        <Button
            android:id="@+id/button_chord"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/select_chord"
            android:textAlignment="viewEnd"
            android:layout_marginRight="@dimen/padding_normal"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/textActive"/>

    </LinearLayout>
</LinearLayout>