<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/selected_chord_text"
        style="@style/ChordSelectorText"
        android:text="C"
        android:gravity="center_vertical|center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>